"Set User Permissions" => "Manage User Permissions"

--- a/frontend/app/views/pluginpanel.html
+++ b/frontend/app/views/pluginpanel.html
@@ -57,7 +57,7 @@
             </md-list-item>
             <md-list-item>
                <md-button class="md-raised md-primary" type="button" ng-click="showUserPermissionsDialog($event)">
-                  Set User Permissions
+                  Manage User Permissions
                </md-button>
             </md-list-item>
          </md-list>
