--- a/frontend/app/views/pluginuserpermissions.html
+++ b/frontend/app/views/pluginuserpermissions.html
@@ -24,7 +24,7 @@
                <md-checkbox ng-checked="user.pivot.allowed_refresh_xml" ng-click="changeRight(user, 'allowed_refresh_xml')">
             </div>
             <div ng-show="!user.pivot.master">
-               <p>Receive Notifications</p>
+               <p>Receive Notifications about XML passing status</p>
                <md-checkbox ng-checked="user.pivot.allowed_notifications" ng-click="changeRight(user, 'allowed_notifications')">
             </div>
             <div ng-show="!user.pivot.master">
