--- a/frontend/app/styles/_panel.sass
+++ b/frontend/app/styles/_panel.sass
@@ -62,6 +62,10 @@
       margin-top: 10px
       &:hover
          background-color: #eee
+      .buttons
+         button
+            position: relative
+            top: -19px
 
 .plugin-user-permissions
    .user-permissions
@@ -86,7 +90,6 @@
       &>div:nth-child(2)
          p
             line-height: 60px
-            padding-left: 8px
       // checkboxes
       &>div
          padding-left: 20px
