--- a/frontend/app/views/pluginuserpermissions.html
+++ b/frontend/app/views/pluginuserpermissions.html
@@ -16,22 +16,22 @@
       <ul>
          <li class="user-permission" ng-repeat="user in permissions" layout="row">
             <h4>{{user.username}}</h4>
-            <div ng-show="user.pivot.master">
+            <div ng-show="user.pivot.admin">
                <p>Master (Allowed everything)</p>
             </div>
-            <div ng-show="!user.pivot.master">
+            <div ng-show="!user.pivot.admin">
                <p>Allowed to refresh the synchro with XML file</p>
                <md-checkbox ng-checked="user.pivot.allowed_refresh_xml" ng-click="changeRight(user, 'allowed_refresh_xml')">
             </div>
-            <div ng-show="!user.pivot.master">
+            <div ng-show="!user.pivot.admin">
                <p>Receive Notifications about XML passing status</p>
                <md-checkbox ng-checked="user.pivot.allowed_notifications" ng-click="changeRight(user, 'allowed_notifications')">
             </div>
-            <div ng-show="!user.pivot.master">
+            <div ng-show="!user.pivot.admin">
                <p>Allowed to change the XML URL</p>
                <md-checkbox ng-checked="user.pivot.allowed_change_xml_url" ng-click="changeRight(user, 'allowed_change_xml_url')">
             </div>
-            <div ng-show="!user.pivot.master" class="delete-button">
+            <div ng-show="!user.pivot.admin" class="delete-button">
                <md-button class="md-fab md-primary md-raised" ng-click="deleteUserRight(user.username)">
                   <i class="fa fa-times white"></i>
                   <md-tooltip md-direction="bottom">Delete this user right</md-tooltip>
