--- a/frontend/app/views/pluginuserpermissions.html
+++ b/frontend/app/views/pluginuserpermissions.html
@@ -21,15 +21,15 @@
             </div>
             <div ng-show="!user.pivot.admin">
                <p>Allowed to refresh the synchro with XML file</p>
-               <md-checkbox ng-checked="user.pivot.allowed_refresh_xml" ng-click="changeRight(user, 'allowed_refresh_xml')">
+               <md-checkbox ng-checked="user.pivot.allowed_refresh_xml" ng-click="toggleRight(user, 'allowed_refresh_xml')">
             </div>
             <div ng-show="!user.pivot.admin">
                <p>Receive Notifications about XML passing status</p>
-               <md-checkbox ng-checked="user.pivot.allowed_notifications" ng-click="changeRight(user, 'allowed_notifications')">
+               <md-checkbox ng-checked="user.pivot.allowed_notifications" ng-click="toggleRight(user, 'allowed_notifications')">
             </div>
             <div ng-show="!user.pivot.admin">
                <p>Allowed to change the XML URL</p>
-               <md-checkbox ng-checked="user.pivot.allowed_change_xml_url" ng-click="changeRight(user, 'allowed_change_xml_url')">
+               <md-checkbox ng-checked="user.pivot.allowed_change_xml_url" ng-click="toggleRight(user, 'allowed_change_xml_url')">
             </div>
             <div ng-show="!user.pivot.admin" class="delete-button">
                <md-button class="md-fab md-primary md-raised" ng-click="deleteUserRight(user.username)">
