--- a/frontend/app/views/pluginpanel.html
+++ b/frontend/app/views/pluginpanel.html
@@ -51,12 +51,12 @@
          <h3>Actions</h3>      
          <md-list class="actions" layout="row">
             <md-list-item>
-               <md-button class="md-raised md-primary" type="button" ng-click="refreshXMLFile()">
+               <md-button class="md-raised md-primary" type="button" ng-click="refreshXMLFile()" ng-show="rights.admin || rights.allowed_refresh_xml">
                   Refresh XML File
                </md-button>
             </md-list-item>
             <md-list-item>
-               <md-button class="md-raised md-primary" type="button" ng-click="showUserPermissionsDialog($event)">
+               <md-button class="md-raised md-primary" type="button" ng-click="showUserPermissionsDialog($event)" ng-show="rights.admin">
                   Manage User Permissions
                </md-button>
             </md-list-item>
