enhanced the autocomplete label

--- a/frontend/app/views/pluginuserpermissions.html
+++ b/frontend/app/views/pluginuserpermissions.html
@@ -48,7 +48,7 @@
           md-item-text="((item.realname !== null && item.realname.length != 0)?(item.realname + ' ('):'')
                       + item.username
                       + ((item.realname !== null && item.realname.length != 0)?(')'):'')"
-          placeholder="Please type the username, realname or email of a registered user"
+          placeholder="Please type the username, realname or email of a registered user, then use arrow and enter to select the user"
           md-no-cache="true"
           md-selected-item="selected_item"
           md-selected-item-change="addUserRight(item)">
