fixing user search bug when in logged from SSO
 + giving users:search scope when using sso
 + changed a bit styling of the plugins list

--- a/frontend/app/styles/_panel.sass
+++ b/frontend/app/styles/_panel.sass
@@ -60,12 +60,16 @@
 .panel-plugins
    md-list-item
       margin-top: 10px
+      height: 80px
+      padding-top: 6px
       &:hover
          background-color: #eee
       .buttons
-         button
+         .md-button
+            margin: 0
+         a.md-button
             position: relative
-            top: -19px
+            top: 12px
 
 .plugin-user-permissions
    .user-permissions
