New task alert_plugin_team_on_xml_error
 It is a subtask of 'update', so 'update' needs to be
 mentionned

--- a/api/mailtemplates/templates/plugin_submission.html
+++ b/api/mailtemplates/templates/plugin_submission.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+
+{% block message %}
 <h1>Dear GLPi Plugins Admin Team,</h1>
 
 <p class="lead">A new Plugin has been submitted on the directory.</p>
@@ -43,3 +46,4 @@
 <p>
    On the production MySQL Server.
 </p>
+{% endblock %}
